--- a/.github/workflows/ClientTests.yml
+++ b/.github/workflows/ClientTests.yml
@@ -4,7 +4,15 @@
 #
 
 name: Client specific tests
-on: [push, pull_request, repository_dispatch]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
+  repository_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
