--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -16,6 +16,9 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
     steps:
       - uses: actions/checkout@v4
+      
+      - name: build duckdb extension
+        run: make
 
       - uses: r-lib/actions/setup-r@v2
         with:
