--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -16,6 +16,8 @@ jobs:
       R_KEEP_PKG_SOURCE: yes
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: 'true'
       
       - name: build duckdb extension
         run: make
