--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -31,3 +31,8 @@ jobs:
           extra-packages: any::rcmdcheck
           needs: check
           working-directory: duckdb-rfuns-r
+          
+      - uses: r-lib/actions/check-r-package@v2
+        with:
+          working-directory: duckdb-rfuns-r
+
