--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -15,9 +15,20 @@ jobs:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
     steps:
+      - name: Install Ninja
+        run: |
+          sudo apt-get update -y -qq
+          sudo apt-get install -y -qq ninja-build
+
       - uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           submodules: 'true'
+        
+      - name: Checkout DuckDB to version
+        run: |
+          cd duckdb
+          git checkout v0.9.2
       
       - name: build duckdb extension
         run: make
