--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -14,6 +14,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      GEN: ninja
     steps:
       - name: Install Ninja
         run: |
