--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ include_directories(src/include duckdb/src/include)
 
 set(EXTENSION_SOURCES src/rfuns_extension.cpp 
                       src/add.cpp
-                      src/eq.cpp)
+                      src/eq.cpp
+                      src/lt.cpp)
 
 build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
 build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})
