--- a/.github/workflows/ClientTests.yml
+++ b/.github/workflows/ClientTests.yml
@@ -13,6 +13,8 @@ on:
       - main
   workflow_dispatch:
   repository_dispatch:
+  schedule:
+    - cron: "20 0 * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
