--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -11,6 +11,8 @@ on:
       - main
   workflow_dispatch:
   repository_dispatch:
+  schedule:
+    - cron: "20 0 * * *"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}-${{ github.head_ref || '' }}-${{ github.base_ref || '' }}-${{ github.ref != 'refs/heads/main' || github.sha }}
@@ -30,6 +32,7 @@ jobs:
     needs: duckdb-stable-build
     uses: ./.github/workflows/_extension_deploy.yml
     secrets: inherit
+    if: github.event_name == 'push'
     with:
       duckdb_version: v0.9.2
       extension_name: rfuns
