--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -19,12 +19,60 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - id: set-matrix
+        run: |
+          matrix=$(
+            {
+              echo
+              gh api \
+                /repos/cran/duckdb/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
+                -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
+                sed -nr '/^#define DUCKDB_VERSION "(.*)"/s//\1/p'
+            
+              gh api \
+                /repos/duckdb/duckdb-r/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
+                -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
+                sed -nr '/^#define DUCKDB_VERSION "(.*)"/s//\1/p'
+            } | jq -R '{version: [inputs|scan(".+")]}'
+          )
+          echo $matrix
+          echo $matrix | jq .
+          echo "::set-output name=matrix::$matrix"
+
+  check-matrix:
+    runs-on: ubuntu-latest
+    needs: matrix
+    steps:
+      - name: Install json2yaml
+        run: |
+          sudo npm install -g json2yaml
+
+      - name: Check matrix definition
+        run: |
+          matrix='${{ needs.matrix.outputs.matrix }}'
+          echo $matrix
+          echo $matrix | jq .
+          echo $matrix | json2yaml
+
   duckdb-stable-build:
     name: Build extension binaries
     uses: duckdb/duckdb/.github/workflows/_extension_distribution.yml@2f2640a93f7631ccbf4d1e46927ae304f00365c0
+    needs: matrix
+
+    strategy:
+      fail-fast: false
+      matrix: ${{fromJson(needs.matrix.outputs.matrix)}}
+
     with:
       vcpkg_commit: a42af01b72c28a8e1d7b48107b33e4f286a55ef6
-      duckdb_version: v0.9.2
+      duckdb_version: ${{ matrix.version }}
       extension_name: rfuns
 
   duckdb-stable-deploy:
@@ -34,7 +82,7 @@ jobs:
     secrets: inherit
     if: github.event_name != 'pull_request'
     with:
-      duckdb_version: v0.9.2
+      duckdb_version: ${{ matrix.version }}
       extension_name: rfuns
       deploy_latest: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
       deploy_versioned: ${{ startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main' }}
