--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -46,7 +46,7 @@ jobs:
           )
           echo $matrix
           echo $matrix | jq .
-          echo "::set-output name=matrix::$matrix"
+          echo "matrix='$matrix'" >> $GITHUB_OUTPUT
 
   check-matrix:
     runs-on: ubuntu-latest
