DUCKDB_SOURCE_ID

--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -36,12 +36,12 @@ jobs:
               gh api \
                 /repos/cran/duckdb/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
                 -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
-                sed -nr '/^#define DUCKDB_VERSION "(.*)"/s//\1/p'
+                sed -nr '/^#define DUCKDB_SOURCE_ID "(.*)"/s//\1/p'
             
               gh api \
                 /repos/duckdb/duckdb-r/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
                 -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
-                sed -nr '/^#define DUCKDB_VERSION "(.*)"/s//\1/p'
+                sed -nr '/^#define DUCKDB_SOURCE_ID "(.*)"/s//\1/p'
             } | uniq | jq -c -R '{version: [inputs|scan(".+")]}'
           )
           echo $matrix
