--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(EXTENSION_NAME ${TARGET_NAME}_extension)
 set(LOADABLE_EXTENSION_NAME ${TARGET_NAME}_loadable_extension)
 
 project(${TARGET_NAME})
-include_directories(src/include duckdb/src/include)
+include_directories(src/include)
 
 set(EXTENSION_SOURCES src/rfuns_extension.cpp 
                       src/add.cpp
