--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -33,15 +33,19 @@ jobs:
           matrix=$(
             {
               echo
-              gh api \
-                /repos/cran/duckdb/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
-                -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
-                sed -nr '/^#define DUCKDB_SOURCE_ID "(.*)"/s//\1/p'
-            
+
+              # Enable after CRAN 0.10 release
+              #gh api \
+              #  /repos/cran/duckdb/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
+              #  -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
+              #  sed -nr '/^#define DUCKDB_SOURCE_ID "(.*)"/s//\1/p'
+
               gh api \
                 /repos/duckdb/duckdb-r/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
                 -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
                 sed -nr '/^#define DUCKDB_SOURCE_ID "(.*)"/s//\1/p'
+
+              gh api /repos/duckdb/duckdb/tags --jq '.[0].commit.sha'
             } | uniq | jq -c -R '{version: [inputs|scan(".+")]}'
           )
           echo $matrix
