Revert "ci: Use extension distribution compatible with pre-0.10.0 for WASM"
This reverts commit e6dc596ffea7cdd58f62e6658b8d660fcdc35476.

--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -66,7 +66,7 @@ jobs:
   duckdb-stable-build:
     name: Build extension binaries
     needs: matrix
-    uses: duckdb/duckdb/.github/workflows/_extension_distribution.yml@ec769f47630de2d19f739339b1356f01765f2a88
+    uses: duckdb/duckdb/.github/workflows/_extension_distribution.yml@v0.10.0
 
     strategy:
       fail-fast: false
