--- a/.github/workflows/MainDistributionPipeline-0.9.2.yml
+++ b/.github/workflows/MainDistributionPipeline-0.9.2.yml
@@ -1,7 +1,7 @@
 #
 # This workflow calls the main distribution pipeline from DuckDB to build, test and (optionally) release the extension
 #
-name: Main Extension Distribution Pipeline
+name: Main Extension Distribution Pipeline for v0.9.2
 on:
   push:
     branches:
