correctly use arg_match()

--- a/duckdb-rfuns-r/NAMESPACE
+++ b/duckdb-rfuns-r/NAMESPACE
@@ -4,5 +4,8 @@ importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbGetQuery)
 importFrom(constructive,construct)
+importFrom(rlang,arg_match)
+importFrom(rlang,caller_env)
+importFrom(rlang,current_env)
 importFrom(tibble,tibble)
 importFrom(withr,defer_parent)
