on_load(duckdb <- ...)

--- a/duckdb-rfuns-r/NAMESPACE
+++ b/duckdb-rfuns-r/NAMESPACE
@@ -7,5 +7,7 @@ importFrom(constructive,construct)
 importFrom(rlang,arg_match)
 importFrom(rlang,caller_env)
 importFrom(rlang,current_env)
+importFrom(rlang,on_load)
+importFrom(rlang,run_on_load)
 importFrom(tibble,tibble)
 importFrom(withr,defer_parent)
