--- a/duckdb-rfuns-r/NAMESPACE
+++ b/duckdb-rfuns-r/NAMESPACE
@@ -4,6 +4,7 @@ importFrom(DBI,dbConnect)
 importFrom(DBI,dbDisconnect)
 importFrom(DBI,dbGetQuery)
 importFrom(constructive,construct)
+importFrom(glue,glue)
 importFrom(rlang,arg_match)
 importFrom(rlang,caller_env)
 importFrom(rlang,current_env)
