--- a/duckdb-rfuns-r/NAMESPACE
+++ b/duckdb-rfuns-r/NAMESPACE
@@ -4,5 +4,7 @@ import(DBI)
 import(rlang)
 importFrom(constructive,construct)
 importFrom(glue,glue)
+importFrom(purrr,map)
+importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(withr,defer_parent)
