spaceship_rfuns() distinguishes binding vs runtime errors

--- a/duckdb-rfuns-r/DESCRIPTION
+++ b/duckdb-rfuns-r/DESCRIPTION
@@ -10,6 +10,7 @@ Authors@R: c(
 Description: User defined functions for duckdb.
 License: MIT + file LICENSE
 Imports: 
+    cli,
     constructive,
     DBI,
     duckdb,
