--- a/duckdb-rfuns-r/NAMESPACE
+++ b/duckdb-rfuns-r/NAMESPACE
@@ -3,6 +3,7 @@
 import(DBI)
 import(cli)
 import(rlang)
+import(slap)
 importFrom(constructive,construct)
 importFrom(glue,glue)
 importFrom(purrr,map)
