--- a/duckdb-rfuns-r/DESCRIPTION
+++ b/duckdb-rfuns-r/DESCRIPTION
@@ -17,6 +17,7 @@ Imports:
     glue,
     purrr,
     rlang,
+    slap,
     tibble,
     withr
 Suggests: 
@@ -27,3 +28,4 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Remotes:
   duckdb/duckdb-r@v0.10.0
+  tadascience/slap
