--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ include_directories(src/include)
 set(EXTENSION_SOURCES src/rfuns_extension.cpp 
                       src/add.cpp
                       src/relop.cpp
-                      src/dispatch.cpp)
+                      src/dispatch.cpp
+                      src/sum.cpp)
 
 build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
 build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})
