--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -34,18 +34,17 @@ jobs:
             {
               echo
 
-              # Enable after CRAN 0.10 release
-              #gh api \
-              #  /repos/cran/duckdb/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
-              #  -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
-              #  sed -nr '/^#define DUCKDB_SOURCE_ID "(.*)"/s//\1/p'
+              gh api \
+                /repos/cran/duckdb/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
+                -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
+                sed -nr '/^#define DUCKDB_SOURCE_ID "(.*)"/s//\1/p'
 
               gh api \
                 /repos/duckdb/duckdb-r/contents/src/duckdb/src/function/table/version/pragma_version.cpp \
                 -H "Accept: application/vnd.github+json" --jq '.content' | base64 -d | \
                 sed -nr '/^#define DUCKDB_SOURCE_ID "(.*)"/s//\1/p'
 
-              gh api /repos/duckdb/duckdb/tags --jq '.[0].commit.sha'
+              gh api /repos/duckdb/duckdb/tags --jq '.[].commit.sha' | head -n 2
             } | uniq | jq -c -R '{version: [inputs|scan(".+")]}'
           )
           echo $matrix
@@ -83,7 +82,7 @@ jobs:
 
   duckdb-stable-deploy:
     name: Deploy extension binaries
-    needs: 
+    needs:
       - duckdb-stable-build
       - matrix
     uses: ./.github/workflows/_extension_deploy.yml
