+ base_r_is_na() ScalarFunctionSet

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ include_directories(src/include)
 set(EXTENSION_SOURCES src/rfuns_extension.cpp 
                       src/add.cpp
                       src/relop.cpp
+                      src/is_na.cpp
                       src/dispatch.cpp)
 
 build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
