--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(EXTENSION_SOURCES src/rfuns_extension.cpp
                       src/add.cpp
                       src/relop.cpp
                       src/is_na.cpp
-                      src/dispatch.cpp)
+                      src/dispatch.cpp
                       src/sum.cpp)
 
 build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
