--- a/.github/workflows/MainDistributionPipeline.yml
+++ b/.github/workflows/MainDistributionPipeline.yml
@@ -69,7 +69,7 @@ jobs:
   duckdb-stable-build:
     name: Build extension binaries
     needs: matrix
-    uses: duckdb/duckdb/.github/workflows/_extension_distribution.yml@v0.10.2
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_distribution.yml@main
 
     strategy:
       fail-fast: false
@@ -85,7 +85,7 @@ jobs:
     needs:
       - duckdb-stable-build
       - matrix
-    uses: ./.github/workflows/_extension_deploy.yml
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_deploy.yml@main
     secrets: inherit
     if: github.event_name != 'pull_request'
 
