--- a/.github/workflows/ClientTests.yml
+++ b/.github/workflows/ClientTests.yml
@@ -23,6 +23,6 @@ concurrency:
 jobs:
   client-tests:
     name: Client Tests
-    uses: duckdb/duckdb/.github/workflows/_extension_client_tests.yml@v0.10.1
+    uses: duckdb/extension-ci-tools/.github/workflows/_extension_client_tests.yml@v0.10.1
     with:
       duckdb_version: v0.10.1
