--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,8 @@ set(EXTENSION_SOURCES src/rfuns_extension.cpp
                       src/add.cpp
                       src/relop.cpp
                       src/dispatch.cpp
-                      src/sum.cpp)
+                      src/sum.cpp
+                      src/minmax.cpp)
 
 build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
 build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})
