--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ set(EXTENSION_SOURCES src/rfuns_extension.cpp
                       src/as_integer.cpp
                       src/dispatch.cpp
                       src/sum.cpp
-                      src/minmax.cpp)
+                      src/minmax.cpp
+                      src/in.cpp)
 
 build_static_extension(${TARGET_NAME} ${EXTENSION_SOURCES})
 build_loadable_extension(${TARGET_NAME} " " ${EXTENSION_SOURCES})
